<resources>
    <string name="app_name">HelloappTI22A1</string>
    <string name="apakabar">Bagaimana Kabar Anda Hari Ini</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="coast_message">Hello Toast</string>
    <string name="reset">Reset</string>
    <string name="Set_Limit">Set Limit</string>
    <string name="artikel_title">Kasus Sianida</string>
    <string name="artikel_subtitel">ICE COLD!</string>

    <string name="artikel_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the Let It Be album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series. For more information, see the Beatles Time Capsule at www.rockument.com. \n\n This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on The Lost Lennon Tapes Vol. 28, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions. \n\n

Highlights include: \n\n

Cry for a Shadow – Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs. \n\n

My Bonnie and Ain’t She Sweet — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal). \n\n

Searchin — A Jerry Leiber – Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys! \n\n

Love Me Do — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version. \n\n

She Loves You – Till There Was You – Twist and Shout — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark. \n\n

Leave My Kitten Alone — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 RandB hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker. \n\n

One After 909 — A song recorded for the ¨C11C album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an RandB feel to it.

</string>
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Movie</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="bocchi">Menceritakan Hitori Gotou seorang gadis SMA yang mulai belajar bermain gitar karena dia bermimpi menjadi anggota band, tapi dia sangat pemalu sehingga dia tidak punya teman.
        Namun, mimpinya mungkin menjadi kenyataan setelah dia bertemu Nijika Ijichi, seorang gadis yang bermain drum dan sedang mencari gitaris baru untuk bandnya.</string>

    <string name="Jigokuraku">Ceritanya berlatar di sekitar tahun kesebelas Zaman Tokugawa. Seorang ninja bernama Gabimaru yang dikenal sebagai ninja pembunuh paling ditakuti, berhasil ditangkap. Saat sedang dipenjara menunggu keputusannya, Gabimaru menerima tawaran dari sang algojo apabila dirinya masih ingin melihat istrinya lagi. Syaratnya adalah jika dia bisa mendapatkan ramuan keabadian dari pulau misterius, mereka akan membebaskannya.</string>
    <string name="nier">menceritakan perjuangan android 2B, 9S dan A2 dalam pertempuran merebut kembali distopia yang dikuasai oleh mesin yang kuat. Umat manusia dipaksa meninggalkan Bumi oleh makhluk mekanis dari dunia lain. Dalam upaya terakhir untuk mengambil kembali planet, umat manusia mengirim tentara android untuk menghancurkan penjajah. Perang antara mesin dan android berkecamuk… Perang yang akan mengungkap kebenaran dunia yang telah terlupakan.</string>
    <string name="delapan_enam">Menceritakan Republik San Magnolia.Untuk waktu yang lama, negara ini telah dikepung oleh tetangganya, Kekaisaran Giadian, yang menciptakan serangkaian drone tak berawak yang disebut Legiun. Setelah bertahun-tahun melakukan penelitian yang melelahkan, Republik akhirnya mengembangkan drone otonom mereka sendiri, mengubah perjuangan sepihak menjadi perang tanpa korban — atau setidaknya, itulah yang diklaim oleh pemerintah.
        Kenyataannya, tidak ada yang namanya perang tanpa pertumpahan darah. Di luar tembok berbenteng yang melindungi delapan puluh lima wilayah Republik terdapat Sektor Delapan Puluh Enam yang “tidak ada”. Para pemuda dan pemudi dari wilayah yang ditinggalkan ini dicap sebagai Eighty-Six dan mengemudikan senjata “tak berawak” ke dalam pertempuran …Shinn mengarahkan tindakan detasemen Eighty-Sixers muda saat berada di medan perang.
        Lena adalah “handler” yang memerintahkan detasemen dari belakang dengan bantuan komunikasi khusus.Kisah perpisahan dari perjuangan yang berat dan menyedihkan dari keduanya dimulai!</string>

    <string name="dagashi_kashi">Shikada Dagashi, toko pedesaan yang menjual permen dan makanan ringan murah (""dagashi") telah dijalankan oleh keluarga Shikada selama sembilan tahun generasi, tapi Kokonotsu tidak ingin mengambil alih toko dari ayahnya, Yō, malah bercita-cita menjadi seniman manga. Hotaru Shidare mengunjungi toko suatu hari dengan harapan dapat merekrut Yō ke perusahaan keluarganya, produsen manisan Shidare Corporation,
        namun Yō menolak kecuali Hotaru terlebih dahulu dapat meyakinkan Kokonotsu untuk mengambil alih Shikada Dagashi.</string>

    <string name="danshi_kokosei">Pada serial ini menceritakan tentang sekelompok anak laki-laki gila dari SMA Sanada yang sedang mencari jati diri.</string>

    <string name="koikimo">Sekali jatuh cinta, sudah tak dapat dihentikan. Pertemuan aneh yang dialami oleh Amakusa Ryo, pebisnis elit yang ngeSIMP gila kepada teman adiknya, Arima Ichika. Mulai dari sana, dia jatuh cinta padanya. Di sisi lain, pendekatan yang dilakukan terlalu blak-blakan, dan Ichika hanya mengatakan “Jijik.”</string>

    <string name="horimiya">Memiliki kepribadian yang bertolak belakang namun memiliki kesamaan yang aneh, keduanya dengan cepat menjadi teman dan sering menghabiskan waktu bersama di rumah Hori. Saat keduanya keluar dari cangkangnya, mereka saling berbagi sisi diri mereka yang tersembunyi dari dunia luar.</string>

    <string name="wotakoi">Tokoh utamanya adalah Narumi, seorang pekerja kantoran yang menyembunyikan gaya hidup fujoshi nya, dan Hirotaka, seorang karyawan perusahaan yang tampan dan cakap yang merupakan otaku. Keduanya tampak sempurna untuk satu sama lain, tetapi cinta sulit untuk seorang otaku.</string>
</resources>
