<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <ImageView
                    android:id="@+id/imgMovie"
                    android:layout_width="142dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/action1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="JIGOKURAKU"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Deskription"
                        android:layout_width="228dp"
                        android:layout_height="wrap_content"
                        android:maxLines="7"
                        android:text="@string/Jigokuraku" />


                    <Button
                        android:id="@+id/jigokuraku"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Watch Trailer Now"
                        android:onClick="jigokutrailer"/>
                </LinearLayout>
            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <ImageView
                    android:id="@+id/imgMovie2"
                    android:layout_width="142dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/action2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tvTitle2"
                        android:layout_width="216dp"
                        android:layout_height="wrap_content"
                        android:text="Nier: Automata"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Deskription2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="7"
                        android:text="@string/nier"/>

                    <Button
                        android:id="@+id/nierautomata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Watch Trailer Now"
                        android:onClick="niertrailer"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <ImageView
                    android:id="@+id/imgMovie3"
                    android:layout_width="138dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/action3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tvTitle3"
                        android:layout_width="224dp"
                        android:layout_height="wrap_content"
                        android:text="86-エイティシックス-, Eiti Shikkusu"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Deskription3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="7"
                        android:text="@string/delapan_enam"/>

                    <Button
                        android:id="@+id/dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Watch Trailer Now"
                        android:onClick="playHiddenloveTrailer"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>


    </ScrollView>

</FrameLayout>
