<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <ImageView
                    android:id="@+id/imgMovie"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:src="@drawable/komedi1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dagashi Kashi (だがしかし)"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Deskription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="7"
                        android:text="@string/dagashi_kashi"/>

                    <Button
                        android:id="@+id/dagashi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Watch Trailer Now"
                        android:onClick="dagashitrailer"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">

                    <ImageView
                        android:id="@+id/imgMovie2"
                        android:layout_width="150dp"
                        android:layout_height="170dp"
                        android:src="@drawable/komedi2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/tvTitle2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="男子高校生の日常, Danshi Kōkōsei no Nichijō"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/Deskription2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="7"
                            android:text="@string/danshi_kokosei"/>

                        <Button
                            android:id="@+id/danshi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="Watch Trailer Now"
                            android:onClick="danshitrailer"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">

                    <ImageView
                        android:id="@+id/imgMovie3"
                        android:layout_width="150dp"
                        android:layout_height="170dp"
                        android:src="@drawable/komedi3" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/tvTitle3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Bocchi the Rock! (ぼっち・ざ・ろっく！ Bocchi za Rokku!)"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/Deskription3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="7"
                            android:text="@string/bocchi"/>

                        <Button
                            android:id="@+id/bocchi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="Watch Trailer Now"
                            android:onClick="bocchitrailer"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>