<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <ImageView
                    android:id="@+id/imgMovie"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:src="@drawable/romance1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Koi to Yobu ni wa Kimochi Warui (恋と呼ぶには気持ち悪い, It's Disgusting to Call This Love)"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Deskription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="7"
                        android:text="@string/koikimo"/>

                    <Button
                        android:id="@+id/koi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Watch Trailer Now"
                        android:onClick="koitrailer"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">

                    <ImageView
                        android:id="@+id/imgMovie2"
                        android:layout_width="150dp"
                        android:layout_height="170dp"
                        android:src="@drawable/romance2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/tvTitle2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Horimiya"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/Deskription2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="7"
                            android:text="@string/horimiya"/>

                        <Button
                            android:id="@+id/hori"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="Watch Trailer Now"
                            android:onClick="horitrailer"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">

                    <ImageView
                        android:id="@+id/imgMovie3"
                        android:layout_width="150dp"
                        android:layout_height="170dp"
                        android:src="@drawable/romance3" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/tvTitle3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Wotakoi: Love Is Hard for Otaku (ヲタクに恋は難しい, Wotaku ni Koi wa Muzukashii)"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/Deskription3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="7"
                            android:text="@string/wotakoi"/>

                        <Button
                            android:id="@+id/wotakoi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="Watch Trailer Now"
                            android:onClick="wotakoitrailer"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>